refactor: move not changing part of the error message to html file and only update error specific part of the message depending on input

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <button id="submit">Submit Guess</button>
       </div>
       <div>
-        <p class="message" id="error-message"></p>
+        <p class="message" id="error-message">
+          <span class="error-style"></span><br>
+          Please use numbers between 1 and 99 and try again 😀
+        </p>
         <p class="message" id="number-of-guesses"></p>
         <p class="message" id="too-high">You guessed too high. Try again.</p>
         <p class="message" id="too-low">You guessed too low. Try again.</p>
